--- a/paginaFeed/package.json
+++ b/paginaFeed/package.json
@@ -15,7 +15,8 @@
     "openai": "^4.68.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
