--- a/backend/liquidsa/src/main/resources/application.properties
+++ b/backend/liquidsa/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:postgresql://dpg-cs424o5umphs73bs9840-a.oregon-postgr
 spring.datasource.username=estudos_sa_user
 spring.datasource.password=81PRs554qVCpUyOYc9osL4AKJWu5GWrD
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# jdbc:postgresql://dpg-cs424o5umphs73bs9840-a.oregon-postgres.render.com:5432/estudos_sa
